--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,4 +1,5 @@
 <form class="form form-register">
+    <h2>Registrarse</h2>
     <div>
         <label for="inputEmail">Ingresa tu email:</label>
         <input type="email" placeholder="Email" id="inputEmail" required>
@@ -11,7 +12,7 @@
         <label for="inputPassword">Ingresa tu contraseña:</label>
         <input type="password" placeholder="Contraseña" id="inputPassword" required>
     </div>
-    <button class="btn formBtn ">Iniciar sesión</button>
+    <button class="btn formBtn ">Registrarse</button>
 </form>
 
 <script src="./js/register.js"></script>
