--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,11 +18,11 @@
             <a href="/" class="header__nav-icon"><img src="./img/cube.png" alt="Icono"></a>
             <div class="header__nav-links">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                     <li><a href="#">Contactos</a></li>
-                    <li><a href="#">Explorar</a></li>
+                    <li><a href="/explorar">Explorar</a></li>
                 </ul>
-                <div>
+                <div class="header__nav-links-user">
                     <a href="/login">
                         <button class="btn login">Iniciar sesión</button>
                     </a>
@@ -39,6 +39,8 @@
     <footer>
         <p>Made by Francisco Lavalle</p>
     </footer>
+
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
