--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,4 +1,5 @@
 <form class="form form-login">
+    <h2>Iniciar sesión</h2>
     <div>
         <label for="inputEmail">Ingresa tu email:</label>
         <input type="email" placeholder="Email" id="inputEmail" required>
@@ -9,3 +10,5 @@
     </div>
     <button class="btn formBtn">Iniciar sesión</button>
 </form>
+
+<script src="/js/login.js"></script>
